updated shell scripts + libs + profiles