@@ -2,14 +2,15 @@
 # get paths and jvm settings:
 source ./env.sh
 
-source /home/bourgesl/libs/graphics-rasterizer/openjfx/jfx10.sh
+# Oracle JDK10
+source ~/test-jdk10.sh
 
-PATCH="--patch-module javafx.graphics=../lib/marlinfx-0.8.2-Unsafe-OpenJDK9.jar"
+#PATCH="--patch-module javafx.graphics=../lib/marlinfx-0.8.2-Unsafe-OpenJDK9.jar"
+PATCH="--patch-module javafx.graphics=../lib/marlinfx-0.9.3.1-Unsafe-OpenJDK9.jar --add-modules=jdk.unsupported,java.logging --add-reads=javafx.graphics=jdk.unsupported,java.logging"
 
-VERBOSE=false
+VERBOSE=true
 
-MARLIN_OPTS="-Dprism.marlinrasterizer=true -Dprism.marlin.double=true -Dprism.rasterizerorder=marlin -Dprism.marlin.log=true -Dprism.marlin.doChecks=false -Dprism.marlin.doStats=false -Dprism.marlin.clip=true"
-
+MARLIN_OPTS="-Dprism.marlinrasterizer=true -Dprism.marlin.double=true -Dprism.rasterizerorder=marlin -Dprism.marlin.log=true -Dprism.marlin.doChecks=false -Dprism.marlin.doStats=false -Dprism.marlin.profile=quality"
 PRISM_OPTS="-Dprism.order=es2 -Dprism.verbose=$VERBOSE -Djavafx.animation.fullspeed=true"
 
 # Enable stats
@@ -24,11 +25,10 @@ echo "Java opts:   $JAVA_OPTS"
 echo "Java tuning: $JAVA_TUNING"
 
 echo "Java version"
-$JIGSAW_HOME/bin/java -version
+java -version
 
 # FxDEMO window:
-FXDEMO="-Dfxdemo.width=600 -Dfxdemo.height=400"
+FXDEMO="-Dfxdemo.width=1000 -Dfxdemo.height=800"
 
-#$JIGSAW_HOME/bin/java @$JFX_XPATCH $PATCH $FXDEMO -Dmapbench.profile=$PROFILE $BOOTCLASSPATH $JAVA_OPTS $JAVA_TUNING -cp ../lib/mapbench-fx-0.1.0.jar:$CLASSPATH it.geosolutions.java2d.MapDemoFX
-$JIGSAW_HOME/bin/java $PATCH $FXDEMO -Dmapbench.profile=$PROFILE $BOOTCLASSPATH $JAVA_OPTS $JAVA_TUNING -cp ../lib/mapbench-fx-0.1.0.jar:$CLASSPATH it.geosolutions.java2d.MapDemoFX
+java $PATCH $FXDEMO -Dmapbench.profile=$PROFILE $BOOTCLASSPATH $JAVA_OPTS $JAVA_TUNING -cp ../lib/mapbench-fx-0.1.0.jar:$CLASSPATH it.geosolutions.java2d.MapDemoFX
 
